8179954: AArch64: C1 and C2 volatile accesses are not sequentially consistent Reviewed-by: roland